<resources>
    <string name="app_name">EFFORT</string>
    <string name="app_level">4</string>
    <string name="customers">Customers</string>
    <string name="customer">Customer</string>
    <string name="pick_none">Pick none</string>
    <string name="pick_customer">Pick a customer</string>
    <string name="pick_date">Pick a date</string>
    <string name="pick_time">Pick a time</string>
    <string name="pick_a_location">Pick a location</string>
    <string name="pick_values">Pick values</string>
    <string name="jobs">Jobs</string>
    <string name="invitations">Invitations</string>
    <string name="invitation">Invitation</string>
    <string name="forms">Forms</string>
    <string name="form">Form</string>
    <string name="agenda">Agenda</string>
    <string name="leaves">Leaves</string>
    <string name="leave">Leave</string>
    <string name="status">Status</string>
    <string name="holidays">Holidays</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="your_remarks">Your remarks</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="open">Open</string>
    <string name="complete">Complete</string>
    <string name="completion_time">Completion time</string>
    <string name="capture_image">Capture image</string>
    <string name="view_image">View image</string>
    <string name="delete_image">Delete image</string>
    <string name="delete_signature">Delete signature</string>
    <string name="view_signature">View signature</string>
    <string name="download_image">Download image</string>
    <string name="download_signature">Download signature</string>
    <string name="capture_video">Capture video</string>
    <string name="capture_audio">Capture audio</string>
    <string name="capture_signature">Capture signature</string>
    <string name="pick_image">Pick image</string>
    <string name="pick_video">Pick video</string>
    <string name="pick_audio">Pick audio</string>
    <string name="pick_signature">Pick signature</string>
    <string name="job_history">Job history</string>
    <string name="history">History</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to EFFORT!</string>
    <string name="server_base_url">http://nd.spoors.in/effortUI</string>
    <string name="db_name">EFFORT.sqlite</string>
    <string name="db_version">28</string>
    <string name="title_activity_job">Job</string>
    <string name="title_activity_customer">Customer</string>
    <string name="note_hint">Type your note here</string>
    <string name="post_note_button_text">Post</string>
    <string name="no_notes">No notes.</string>
    <string name="no_stages">No stages.</string>
    <string name="note_empty_toast_message">Empty string cannot be posted as a note. Please type something.</string>
    <string name="sdcard_not_present_toast_message">This operation requires an SD Card. But, you don\'t seem to have one in this device.</string>
    <string name="sdcard_not_mounted_toast_message">Looks like your SD Card is not mounted. Please mount it, and try this operation again.</string>
    <string name="title_activity_audio_capture">Audio recorder</string>
    <string name="title_activity_signature_capture">Signature</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="start_playing">Start playing</string>
    <string name="stop_playing">Stop playing</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="howto_capture_audio">To capture audio:\n1. Tap <b>Start recording</b>\n2. Capture audio\n3. Tap <b>Stop recording</b>\n3. (Optional) Tap <b>Start playing</b> to test your recording.\n5. Tap <b>Save</b> or <b>Discard</b></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="json_settings_note_location_timeout">commentLocationTimeout</string>
    <string name="json_settings_location_shelf_life">locationShelfLife</string>
    <string name="json_settings_tracking_frequency">trackFrequency</string>
    <string name="json_settings_show_completed_jobs">showCompletedJobs</string>
    <string name="json_settings_can_update_home_location">canUpdateHomeLocation</string>
    <string name="json_settings_can_edit_customer_info">canEditCustomerInfo</string>
    <string name="json_settings_app_title">appTitle</string>
    <string name="no_proofs">No proofs.</string>
    <string name="no_extras">No extras.</string>
    <string name="no_agenda_events">No agenda events.</string>
    <string name="no_customers">No customers.</string>
    <string name="no_jobs">No jobs.</string>
    <string name="no_job_invitations">No job invitations.</string>
    <string name="no_holidays">No holidays.</string>
    <string name="no_leaves">No leaves.</string>
    <string name="no_employees">No Employees.</string>
    <string name="no_form_templates">No form templates.</string>
    <string name="no_forms">No forms.</string>
    <string name="add">Add</string>
    <string name="add_job">Add job</string>
    <string name="add_customer">Add customer</string>
    <string name="submit_form">Submit form</string>
    <string name="apply_for_leave">Apply for leave</string>
    <string name="cancel_leave">Cancel leave</string>
    <string name="edit">Edit</string>
    <string name="alert_dialog_title">Do you want to save your changes?</string>
    <string name="alert_dialog_save">Save</string>
    <string name="alert_dialog_discard">Discard</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="job_title_label">Title</string>
    <string name="job_type_label">Type</string>
    <string name="job_stage_label">Stage</string>
    <string name="job_description_label">Description</string>
    <string name="job_customer_label">Customer</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="media_type_icon">Media Type Icon</string>
    <string name="image_view_content_description">Image</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="name_star">Name*</string>
    <string name="Customer_ID">Customer ID</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin_code">PIN code</string>
    <string name="country">Country</string>
    <string name="landmark">Landmark</string>
    <string name="primary_contact">Primary contact</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="title">Title</string>
    <string name="secondary_contact">Secondary contact</string>
    <string name="sync">Sync</string>
    <string name="agenda_item_type">Agenda Item Type</string>
    <string name="clickable">Clickable</string>
    <string name="remove_customer">Remove customer</string>
    <string name="remind">Job reminders</string>
    <string name="update_mode">Update mode</string>
    <string name="fall_back_interval">Fall back interval</string>
    <string name="interval_in_minute">Interval in minute</string>
    <string name="sort">Sort customer list</string>
    <string name="upload">Upload large files (> 500 KB)</string>
    <string name="tracking">Tracking</string>
    <string name="tracking_frequency">Tracking frequency</string>
    <string name="last_update_to_cloud">Last update to cloud</string>
    <string name="last_update_to_cloud_via_sms">Last update via SMS</string>
    <string name="last_known_gps_location">Last known GPS location</string>
    <string name="last_known_network_location">Last known network location</string>
    <string name="last_known_fused_location">Last known location</string>
    <string name="use_this_location">Use this location</string>
    <string name="modify_location">Modify location</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="fix_time">Fix time</string>
    <string name="employee_home_location">Employee home location</string>
    <string name="about">About</string>
    <string name="version">EFFORT version</string>
    <string name="effort_id">EFFORT ID</string>
    <string name="not_available">Not available</string>
    <string name="filter">Filter</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_location_picker">Location picker</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="recommended">Optional but recommended</string>
    <string name="mark_all_jobs_as_read">Mark all as read</string>
    <string name="mark_all_jobs_as_unread">Mark all as unread</string>
    <string name="mark_all_invitations_as_read">Mark all as read</string>
    <string name="mark_all_invitations_as_unread">Mark all as unread</string>
    <string name="actions">Actions</string>
    <string name="made_in_india">Designed &amp; developed in India by</string>
    <string name="spoors">© 2014 Spoors Technology Solutions India Pvt. Ltd.</string>
    <string name="accepted">Accepted?</string>
    <string name="no_route_plans">No route plans.</string>
    <string name="route_plan">Route Plan Details</string>
    <string name="route_plan_from">From</string>
    <string name="route_plan_to">To</string>
    <string name="customers_to_visit">Customers to visit</string>
    <string name="sort_by_nearness">Sort by nearness</string>
    <string name="complete_route_plan">Complete Route Plan</string>
    <string name="complete_visit">Complete Visit</string>
    <string name="record_activities">Record Activities</string>
    <string name="route_history">Route History </string>
    <string name="no_route_history">No route history found.</string>
    <string name="no_activities">No activities found.</string>
    <string name="view">View</string>
    <string name="fetch_all_route_history_from_local">Show all activities stored locally</string>
    <string name="fetch_more_route_history_from_cloud">Fetch more activities from cloud</string>
    <string name="no_work_flows">No approvals.</string>
    <string name="work_flow_item_type">Workflow Item Type</string>
    <string name="duration">Duration</string>
    <string name="add_workFlow">Submit for approval</string>
    <string name="add_form_to_work_flow">Add form for approval</string>
    <string name="no_work_flow_specs">No forms with approvals.</string>
    <string name="no_work_flow_history">No approval history.</string>
    <string name="re_submit_button">Re-submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="view_button">View Form</string>
    <string name="no_pending_submisssions">No pending submissions found.</string>
    <string name="save_workflow">Submit for approval</string>
    <string name="view_status">View approval status</string>
    <string name="showCurrentLocation">Show my location</string>
    <string name="showMarkerLocation">Show marked location</string>
    <string name="moveMarkerToCurrentLocation">Mark my location</string>
    <string name="useMarkerLocation">Use marked location</string>
    <string name="mapPickerHint">Long-press at a location of your choice to move marker there</string>
    <string name="search">Search</string>
    <string name="delete_messages">Delete messages</string>
    <string name="print">Print</string>
    <string name="action_select_all">Select all</string>
    <string name="action_unselect_all">Unselect all</string>
</resources>