<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/sync"
        android:icon="@drawable/ic_navigation_refresh"
        android:orderInCategory="100"
        android:title="@string/sync"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_content_new"
        android:orderInCategory="110"
        android:title="@string/add"
        app:showAsAction="always|withText">
        <menu>
            <item
                android:id="@+id/addCustomer"
                android:orderInCategory="111"
                android:title="@string/add_customer"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/addJob"
                android:orderInCategory="112"
                android:title="@string/add_job"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/submitForm"
                android:orderInCategory="113"
                android:title="@string/submit_form"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/applyForLeave"
                android:orderInCategory="114"
                android:title="@string/apply_for_leave"
                app:showAsAction="always|withText"/>
        </menu>
    </item>

</menu>