<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/editJob"
        android:icon="@drawable/ic_content_edit"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/completeJob"
        android:icon="@drawable/ic_navigation_accept"
        android:orderInCategory="101"
        android:title="@string/complete"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/saveJob"
        android:icon="@drawable/ic_content_save"
        android:orderInCategory="102"
        android:title="@string/save"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/discardJob"
        android:icon="@drawable/ic_content_discard"
        android:orderInCategory="103"
        android:title="@string/discard"
        app:showAsAction="always|withText"/>

    <group android:id="@+id/proofsItems" >
        <item
            android:icon="@drawable/ic_content_new"
            android:orderInCategory="110"
            android:title="@string/add"
            app:showAsAction="always|withText">
            <menu>
                <item
                    android:id="@+id/captureProofImage"
                    android:orderInCategory="111"
                    android:title="@string/capture_image"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/captureProofVideo"
                    android:orderInCategory="112"
                    android:title="@string/capture_video"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/captureProofAudio"
                    android:orderInCategory="113"
                    android:title="@string/capture_audio"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/captureProofSignature"
                    android:orderInCategory="114"
                    android:title="@string/capture_signature"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/pickProofImage"
                    android:orderInCategory="115"
                    android:title="@string/pick_image"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/pickProofVideo"
                    android:orderInCategory="116"
                    android:title="@string/pick_video"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/pickProofAudio"
                    android:orderInCategory="117"
                    android:title="@string/pick_audio"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/pickProofSignature"
                    android:orderInCategory="118"
                    android:title="@string/pick_signature"
                    app:showAsAction="always|withText"/>
            </menu>
        </item>
    </group>
    <group android:id="@+id/extrasItems" >
        <item
            android:icon="@drawable/ic_content_new"
            android:orderInCategory="120"
            android:title="@string/add"
            app:showAsAction="always|withText">
            <menu>
                <item
                    android:id="@+id/captureExtraImage"
                    android:orderInCategory="121"
                    android:title="@string/capture_image"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/captureExtraVideo"
                    android:orderInCategory="122"
                    android:title="@string/capture_video"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/captureExtraAudio"
                    android:orderInCategory="123"
                    android:title="@string/capture_audio"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/captureExtraSignature"
                    android:orderInCategory="124"
                    android:title="@string/capture_signature"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/pickExtraImage"
                    android:orderInCategory="125"
                    android:title="@string/pick_image"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/pickExtraVideo"
                    android:orderInCategory="126"
                    android:title="@string/pick_video"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/pickExtraAudio"
                    android:orderInCategory="127"
                    android:title="@string/pick_audio"
                    app:showAsAction="always|withText"/>
                <item
                    android:id="@+id/pickExtraSignature"
                    android:orderInCategory="128"
                    android:title="@string/pick_signature"
                    app:showAsAction="always|withText"/>
            </menu>
        </item>
    </group>

</menu>