<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/sub_menu"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_select_all"
                android:title="@string/action_select_all"/>
            <item
                android:id="@+id/action_unselect_all"
                android:title="@string/action_unselect_all"/>
        </menu>
    </item>
    <item
        android:id="@+id/deleteMessages"
        android:icon="@drawable/ic_content_remove"
        android:orderInCategory="101"
        android:title="@string/delete_messages"
        app:showAsAction="always|withText"/>

</menu>