<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/sub_menu"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_select_all"
                android:title="@string/action_select_all"/>
            <item
                android:id="@+id/action_unselect_all"
                android:title="@string/action_unselect_all"/>
        </menu>
    </item>

</menu>